# sunfish3

src/: CMakeLists.txt
src/book/: CMakeLists.txt
src/config/: CMakeLists.txt
src/core/: CMakeLists.txt
src/cui/: CMakeLists.txt
src/learning/: CMakeLists.txt
src/logger/: CMakeLists.txt
src/network/: CMakeLists.txt  Connection.cpp  Connection_.h  CsaClient.h
src/searcher/: CMakeLists.txt  Searcher.cpp  Searcher.h
