add_library(sunfish_core STATIC
	base/Piece.cpp
	base/Square.cpp
	board/Bitboard.cpp
	board/Board.cpp
	board/Zobrist.cpp
	dev/CodeGenerator.cpp
	dev/MoveGenChecker.cpp
	dev/MoveGeneratorExpr.cpp
	move/Move.cpp
	move/MoveGenerator.cpp
	move/MoveTable.cpp
	record/CsaReader.cpp
	record/CsaWriter.cpp
	record/Record.cpp
	util/Data.cpp
	util/FileList.cpp
	util/Wildcard.cpp
)
